data/derived/fa15/progs/unify/prog3185.ml.out
Characters 82-88:
  wwhile (helper,b);;
          ^^^^^^
Error: This expression has type 'a -> bool
       but an expression was expected of type 'a -> 'a * bool
       Type bool is not compatible with type 'a * bool 
